src/main/java/com/example/rabam/error/CourierUpdateException.java
package com.example.rabam.error;

public class CourierUpdateException extends RuntimeException{
    public CourierUpdateException() {
        super("Courier didn't update");
    }
}
